# rulegate

./: .gitignore  .pre-commit-config.yaml  COST.md  Dockerfile  Makefile  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
evals/: __init__.py  harness.py
evals/datasets/: golden.v1.jsonl
src/policy_guarded_ops_agent/: __init__.py  config.py  demo.py  main.py  runtime.py
src/policy_guarded_ops_agent/agent/: __init__.py  context.py  deps.py  graph.py  nodes.py  prompts.py  state.py
src/policy_guarded_ops_agent/api/: __init__.py  app.py  deps.py  routes.py  schemas.py
src/policy_guarded_ops_agent/approvals/: __init__.py  models.py  queue.py
src/policy_guarded_ops_agent/audit/: __init__.py  models.py  store.py
src/policy_guarded_ops_agent/billing/: __init__.py  api.py
src/policy_guarded_ops_agent/domain/: __init__.py  actions.py  models.py
src/policy_guarded_ops_agent/fakes/: __init__.py  fake_llm.py
src/policy_guarded_ops_agent/guardrails/: __init__.py  base.py  ops.py
src/policy_guarded_ops_agent/llm/: __init__.py  gateway.py
src/policy_guarded_ops_agent/obs/: __init__.py  tracing.py
src/policy_guarded_ops_agent/policy/: __init__.py  engine.py  models.py  rules.py  violations.py
src/policy_guarded_ops_agent/storage/: __init__.py  base.py  checkpointer.py  db.py  session.py
src/policy_guarded_ops_agent/tools/: __init__.py  registry.py
tests/: conftest.py  test_evals.py  test_gateway.py  test_guardrails.py  test_tracing.py
web/: next.config.ts  package-lock.json  package.json  tsconfig.json  wrangler.jsonc
web/app/: app.css  components.css  globals.css  landing.module.css  layout.tsx  page.tsx  tokens.css
web/app/(console)/: layout.tsx
web/app/(console)/ablation/: page.tsx
web/app/(console)/audit/: page.tsx
web/app/(console)/queue/: page.tsx
web/app/(console)/queue/[id]/: page.tsx
web/app/(console)/rules/: page.tsx
web/app/login/: page.tsx
web/components/: Effect.tsx  ThemeToggle.tsx  effect.module.css  icons.tsx  theme.module.css
web/components/ablation/: AblationView.tsx  ablation.module.css
web/components/audit/: AuditView.tsx  audit.module.css
web/components/landing/: GateSim.tsx  Logo.tsx  gatesim.module.css
web/components/login/: LoginClient.tsx  RejectionHero.tsx  SignInForm.tsx  form.module.css  hero.module.css  login.module.css
web/components/queue/: ActionDetail.tsx  QueueView.tsx  detail.module.css  queue.module.css
web/components/rules/: Code.tsx  RulesView.tsx  code.module.css  rules.module.css
web/components/shell/: CommandPalette.tsx  Shell.tsx  palette.module.css  shell.module.css
web/lib/: ablation.ts  auth.ts  fixtures.ts  format.ts
